--- a/index.html
+++ b/index.html
@@ -10,65 +10,121 @@
 </head>
 <body>
 <div class="fon">
-<div class="row">
-  <div class="col-6"  style="background-image: url('image/Rectangle 7.png' ) ; height: 700px; background-repeat: no-repeat">
+    <div class="row">
+        <div class="col-6"
+             style="background-image: url('image/Rectangle 7.png' ) ; height: 700px; background-repeat: no-repeat">
 
-      <div class="col-12" style="background-image: url('image/Group 11.png');height: 330px; background-repeat: no-repeat; margin: 20px  100px"> </div>
-      <div class="col-12" style="padding-left:  100px"><b style="font-size: 30px">Lorem ipsum dolor sit amet, consectetur adipisicing.</b> <br>Lorem ipsum dolor sit amet,
-          consectetur adipisicing elit. Aliquid amet culpa ducimus explicabo fugiat magnam quam reiciendis sit velit
-          veniam! Distinctio eligendi facilis sunt ullam vel.
-      </div>
-      <div class="col-12">
-          <div class="yollanma" style="color: white;background-color: #0056b3;width: 100px;padding-left: 10px;margin: 20px 80px"><b style="font-size: 20px">Kirish ></b></div>
-      </div>
-  </div>
-   <div class="col-6" style="background-image: url('image/Group (1).png'); ; height: 700px; background-repeat: no-repeat;background-position: left">
-       <div class="navbar">
-           <ul>
-               <li style="display: inline-block; margin: 5px 15px"><a href="#" style="color: white">Home</a></li>
-               <li   style="display: inline-block; margin: 5px 15px"><a href="#" style="color: white">Dastuslash</a></li>
-               <li   style="display: inline-block; margin: 5px 15px"><a href="#" style="color: white">Narxlar</a></li>
-               <li   style="display: inline-block; margin: 5px 15px"><a href="#" style="color: white">Biz haqda</a></li>
-               <select name="aa" id="ee" style="margin-left:30px ">
-                   <option value="1">Eng</option>
-                   <option value="2">Rus</option>
-                   <option value="3" selected>Uz</option>
-                   <option value="4">Turk</option>
-               </select>
-           </ul>
-       </div>
-       <div class="player" style="background-image: url('image/pl2.png') ;height: 54px; width:60px ;  background-repeat: no-repeat;margin: 200px 400px"></div>
-   </div>
-</div>
-<div class="row" >
-<div class="col-12" style="background-image: url('image/Rectangle 4.png');background-repeat: no-repeat; height: 1200px">
-    <div class="col-6" style="background-image: url('image/Rectangle 2.png'); height: 700px; background-repeat: no-repeat;margin-top: 320px;margin-left:  50px">
-        <div class="col" style="height: 507px"><img src="image/marvin-meyer-SYTO3xs06fU-unsplash.png" style="margin: 70px 60px;border-radius: 150px 70px 300px 60px"
-                                                                 height="300" width="450"/></div>
-    </div>
-    <div class="col-6">
-        <div class="col"><b style="font-size: 30px">Lorem ipsum dolor sit amet, consectetur adipisicing.</b> <br>Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit. Aliquid amet culpa ducimus explicabo fugiat magnam quam reiciendis sit velit
-            veniam! Distinctio eligendi facilis sunt ullam vel.
+            <div class="col-12"
+                 style="background-image: url('image/Group 11.png');height: 330px; background-repeat: no-repeat; margin: 20px  100px"></div>
+            <div class="col-12" style="padding-left:  100px"><b style="font-size: 30px">Lorem ipsum dolor sit amet,
+                consectetur adipisicing.</b> <br>Lorem ipsum dolor sit amet,
+                consectetur adipisicing elit. Aliquid amet culpa ducimus explicabo fugiat magnam quam reiciendis sit
+                velit
+                veniam! Distinctio eligendi facilis sunt ullam vel.
+            </div>
+            <div class="col-12">
+                <button type="button" class="btn btn-info" style="margin-left: 80px">
+                    kirish
+
+                </button>
+            </div>
         </div>
-        <div class="col">
-            <div class="yollanma" style="color: white;background-color: #0056b3;width: 100px;padding-left: 10px"><b style="font-size: 20px">Kirish ></b></div>
+        <div class="col-6"
+             style="background-image: url('image/Group (1).png'); ; height: 700px; background-repeat: no-repeat;background-position: left">
+            <div class="navbar">
+                <ul>
+                    <li style="display: inline-block; margin: 5px 15px"><a href="#" style="color: white">Home</a></li>
+                    <li style="display: inline-block; margin: 5px 15px"><a href="#" style="color: white">Dastuslash</a>
+                    </li>
+                    <li style="display: inline-block; margin: 5px 15px"><a href="#" style="color: white">Narxlar</a>
+                    </li>
+                    <li style="display: inline-block; margin: 5px 15px"><a href="#" style="color: white">Biz haqda</a>
+                    </li>
+                    <select name="aa" id="ee"
+                            style="margin-left: 30px;border: 0;background-color: transparent;color: white">
+                        <option value="1">Eng</option>
+                        <option value="2">Rus</option>
+                        <option value="3" selected>Uz</option>
+                        <option value="4">Turk</option>
+                    </select>
+                </ul>
+            </div>
+            <div  style="width: 100px;height: 100px;margin: 150px 300px; border-radius: 50%;background-color: rgba(183,245,224,0.82);text-align: -webkit-center;padding-top: 15px">
+
+                <div  style="width: 70px;height: 70px; border-radius: 50%;background-color:darkblue;position: relative">
+                    <a href="#" style="font-size: 70px;color: white;position: absolute;top:-21px;left: 8px">&blacktriangleright;</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="row"
+             style="background-image: url('image/Rectangle 4.png');background-repeat: no-repeat; height: 1200px;display: flex">
+
+          <div class="row" style="display: flex;width: 100%">
+              <div class="row"
+                   style="background-image: url('image/Rectangle 2.png'); height: 500px; background-repeat: no-repeat;margin-top: 320px;margin-left:  100px">
+                  <div class="col-12"><img src="image/marvin-meyer-SYTO3xs06fU-unsplash.png"
+                                           style="margin: 70px 60px;border-radius: 150px 70px 300px 60px"
+                                           height="300px"/></div>
+              </div>
+              <div class="row" style="width: 50%;height: 300px; margin-top: 400px;margin-left: 20px;margin-right: 5px" >
+                  <div class="row"><b style="font-size: 30px">Lorem ipsum dolor sit amet,<br> consectetur adipisicing.</b>
+                      <br>Lorem ipsum dolor sit amet,
+                      consectetur adipisicing elit. Aliquid amet culpa ducimus explicabo fugiat magnam quam reiciendis sit
+                      velit
+                      veniam! Distinctio eligendi facilis sunt ullam vel.
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consequatur dolorum
+                      eum fuga fugiat itaque laboriosam, magni molestiae molestias natus officiis rerum vitae?
+                  </div>
+                  <div class="col" style="width: 100%">
+                      <button type="button" class="btn btn-info" style="background-color: white;color: #0056b3">
+                          maslahat >
+
+                      </button>
+                  </div>
+              </div>
+          </div>
+            <div class="row" style="background-image: url('image/Subtract.png');background-repeat: no-repeat;width: 200px;height: 200px;margin-left: 750px"></div>
+
+        </div>
+
+        <div class="col-12"
+             style="background-image: url('image/Безымянный-1.png');background-repeat: no-repeat;width: 1440px; height: 900px">
+            <div class="col text-center" style="font-size: 30px"><b>Company statistics</b></div>
+            <div class="row" >
+                <div class="col-6 text-center">
+                    <div class="row" style="display: flex">
+                        <div class="cod" style="width: 50%; height: 120px;padding: 120px"><b style="font-size: 50px">100</b> <br>Lorem ipsum.</div>
+                        <div class="cod" style="width: 50%; height: 120px;padding: 120px"><b style="font-size: 50px">120</b>  <br>Lorem ipsum.</div>
+                    </div>
+                    <div class="row">
+                        <div class="cod" style="width: 50%; height: 120px;padding: 20px"><b style="font-size: 50px">50</b>  <br>Lorem ipsum.</div>
+                        <div class="cod" style="width: 50%; height: 120px;padding: 20px"><b style="font-size: 50px">80</b>  <br>Lorem ipsum.</div>
+                    </div>
+
+                </div>
+                <div class="col-6">
+                    <div class="row"
+                         style="background-image: url('image/Rectangle 2.png'); height: 500px; background-repeat: no-repeat;margin-top: 60px;margin-left:  50px">
+                        <div class="col-12"><img src="image/adeolu-eletu-unRkg2jH1j0-unsplash.png"
+                                                 style="margin: 70px 60px;border-radius: 150px 70px 300px 60px"
+                                                 height="300px"/></div>
+                    </div>
+            </div>
+        </div>
+
+            <div class="col" style="font-size: 40px;text-align: center;padding-top: 100px"><b>Portfolio</b></div>
+        <div class="col-6"
+             style="background-image: url('image/Ellipse 2.png');background-repeat: no-repeat; height: 370px;background-position: center;margin-top: 200px">
+            <div class="tell" style="background-image: url('image/nur qaytarish.png'); width: 551px;height: 453px;background-repeat: no-repeat"></div>
         </div>
     </div>
-</div>
-</div>
-<div class="row" >
-    <div class="col-12" style="background-image: url('image/Безымянный-1.png');background-repeat: no-repeat;width: 1440px; height: 900px"></div>
-</div>
-    <div class="row" >
-<div class="col-6"  style="background-image: url('image/Ellipse 2.png');background-repeat: no-repeat; height: 370px;background-position: center"></div>
-    </div>
-    <div class="row"  >
-        <div class="col-6"  style="background-image: url('image/Rectangle 6.png'); background-repeat: no-repeat; height: 520px;background-position:top;background-position:0px"></div>
-        <div class="col-6"  style=" height: 520px "></div>
-    </div>
+
+
+
+
  <div class="row">
-     <div class="col-12" style="background-image: url('image/Без имени.png'); background-repeat: no-repeat;width: 500px; height: 620px;background-position:70px"></div>
+    </div>
 
  </div>
     <div class="row">
@@ -83,7 +139,7 @@
 
     </div>
     <div class="rowww">
- ,;kjdvn;mvlkdnbknb lkblzmbmhv g
+
     </div>
 
 </div>
