--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<div class="fon">
+<div class="fon" style="box-sizing: border-box">
     <div class="row">
         <div class="col-6"
              style="background-image: url('image/Rectangle 7.png' ) ; height: 700px; background-repeat: no-repeat">
@@ -49,9 +49,9 @@
                     </select>
                 </ul>
             </div>
-            <div  style="width: 100px;height: 100px;margin: 150px 300px; border-radius: 50%;background-color: rgba(183,245,224,0.82);text-align: -webkit-center;padding-top: 15px">
+            <div style="width: 100px;height: 100px;margin: 150px 300px; border-radius: 50%;background-color: rgba(183,245,224,0.82);text-align: -webkit-center;padding-top: 15px">
 
-                <div  style="width: 70px;height: 70px; border-radius: 50%;background-color:darkblue;position: relative">
+                <div style="width: 70px;height: 70px; border-radius: 50%;background-color:darkblue;position: relative">
                     <a href="#" style="font-size: 70px;color: white;position: absolute;top:-21px;left: 8px">&blacktriangleright;</a>
                 </div>
             </div>
@@ -60,46 +60,57 @@
         <div class="row"
              style="background-image: url('image/Rectangle 4.png');background-repeat: no-repeat; height: 1200px;display: flex">
 
-          <div class="row" style="display: flex;width: 100%">
-              <div class="row"
-                   style="background-image: url('image/Rectangle 2.png'); height: 500px; background-repeat: no-repeat;margin-top: 320px;margin-left:  100px">
-                  <div class="col-12"><img src="image/marvin-meyer-SYTO3xs06fU-unsplash.png"
-                                           style="margin: 70px 60px;border-radius: 150px 70px 300px 60px"
-                                           height="300px"/></div>
-              </div>
-              <div class="row" style="width: 50%;height: 300px; margin-top: 400px;margin-left: 20px;margin-right: 5px" >
-                  <div class="row"><b style="font-size: 30px">Lorem ipsum dolor sit amet,<br> consectetur adipisicing.</b>
-                      <br>Lorem ipsum dolor sit amet,
-                      consectetur adipisicing elit. Aliquid amet culpa ducimus explicabo fugiat magnam quam reiciendis sit
-                      velit
-                      veniam! Distinctio eligendi facilis sunt ullam vel.
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consequatur dolorum
-                      eum fuga fugiat itaque laboriosam, magni molestiae molestias natus officiis rerum vitae?
-                  </div>
-                  <div class="col" style="width: 100%">
-                      <button type="button" class="btn btn-info" style="background-color: white;color: #0056b3">
-                          maslahat >
+            <div class="row" style="display: flex;width: 100%">
+                <div class="row"
+                     style="background-image: url('image/Rectangle 2.png'); height: 500px; background-repeat: no-repeat;margin-top: 320px;margin-left:  100px">
+                    <div class="col-12"><img src="image/marvin-meyer-SYTO3xs06fU-unsplash.png"
+                                             style="margin: 70px 60px;border-radius: 150px 70px 300px 60px"
+                                             height="300px"/></div>
+                </div>
+                <div class="row"
+                     style="width: 50%;height: 300px; margin-top: 400px;margin-left: 20px;margin-right: 5px">
+                    <div class="row"><b style="font-size: 30px">Lorem ipsum dolor sit amet,<br> consectetur adipisicing.</b>
+                        <br>Lorem ipsum dolor sit amet,
+                        consectetur adipisicing elit. Aliquid amet culpa ducimus explicabo fugiat magnam quam reiciendis
+                        sit
+                        velit
+                        veniam! Distinctio eligendi facilis sunt ullam vel.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consequatur dolorum
+                        eum fuga fugiat itaque laboriosam, magni molestiae molestias natus officiis rerum vitae?
+                    </div>
+                    <div class="col" style="width: 100%">
+                        <button type="button" class="btn btn-info" style="background-color: white;color: #0056b3">
+                            maslahat >
 
-                      </button>
-                  </div>
-              </div>
-          </div>
-            <div class="row" style="background-image: url('image/Subtract.png');background-repeat: no-repeat;width: 200px;height: 200px;margin-left: 750px"></div>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="row"
+                 style="background-image: url('image/Subtract.png');background-repeat: no-repeat;width: 200px;height: 200px;margin-left: 750px"></div>
 
         </div>
 
         <div class="col-12"
              style="background-image: url('image/Безымянный-1.png');background-repeat: no-repeat;width: 1440px; height: 900px">
             <div class="col text-center" style="font-size: 30px"><b>Company statistics</b></div>
-            <div class="row" >
+            <div class="row">
                 <div class="col-6 text-center">
                     <div class="row" style="display: flex">
-                        <div class="cod" style="width: 50%; height: 120px;padding: 120px"><b style="font-size: 50px">100</b> <br>Lorem ipsum.</div>
-                        <div class="cod" style="width: 50%; height: 120px;padding: 120px"><b style="font-size: 50px">120</b>  <br>Lorem ipsum.</div>
+                        <div class="cod" style="width: 50%; height: 120px;padding: 120px"><b
+                                style="font-size: 50px">100</b> <br>Lorem ipsum.
+                        </div>
+                        <div class="cod" style="width: 50%; height: 120px;padding: 120px"><b
+                                style="font-size: 50px">120</b> <br>Lorem ipsum.
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="cod" style="width: 50%; height: 120px;padding: 20px"><b style="font-size: 50px">50</b>  <br>Lorem ipsum.</div>
-                        <div class="cod" style="width: 50%; height: 120px;padding: 20px"><b style="font-size: 50px">80</b>  <br>Lorem ipsum.</div>
+                        <div class="cod" style="width: 50%; height: 120px;padding: 20px"><b
+                                style="font-size: 50px">50</b> <br>Lorem ipsum.
+                        </div>
+                        <div class="cod" style="width: 50%; height: 120px;padding: 20px"><b
+                                style="font-size: 50px">80</b> <br>Lorem ipsum.
+                        </div>
                     </div>
 
                 </div>
@@ -110,39 +121,142 @@
                                                  style="margin: 70px 60px;border-radius: 150px 70px 300px 60px"
                                                  height="300px"/></div>
                     </div>
+                </div>
+            </div>
+
+            <div class="col" style="font-size: 40px;text-align: center"><b>Portfolio</b></div>
+            <div class="row" style="display: flex;">
+                <div class="col-6"
+                     style="background-image: url('image/Ellipse 2.png');background-repeat: no-repeat; height: 370px;background-position: center;margin-top: 100px">
+                    <div class="tell"
+                         style="background-image: url('image/nur qaytarish.png'); width: 551px;height: 453px;background-repeat: no-repeat;margin-left: 40px"></div>
+                </div>
+                <div class="col-6" style="padding: 200px 50px">
+                    <b><a href="#">&DoubleLongLeftArrow; </a><a href="#">&DoubleLongRightArrow;</a></b><br>
+                    <b>Lorem ipsum dolor<br> sit amet, consectetur adipisicing elit. Ipsa iste <br>nobis odio repellat.
+                        <br>
+                        <p style="padding-top: 20px">More <a href="#"> > </a></p></b>
+                </div>
+            </div>
+        </div>
+        <div class="col-12"
+             style="background-image: url('image/Rectangle 6.png'); background-repeat: no-repeat; height: 800px;background-position: left;margin-top: 130px">
+            <div class="row">
+                <div class="col-6"></div>
+                <div class="col-6">
+                    <div class="cad"><b ><p style="padding-top: 500px;font-size: 40px;padding-left: 20px">Services</p></b></div>
+                    <div class="cad" style="width: 70%;text-align: left;padding-left: 20px">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Ad dicta exercitationem fuga illo minima modi mollitia nisi non,
+                        officiis perferendis perspiciatis quaerat ratione, soluta tempora,
+                        ullam vero voluptas. Aliquid architecto assumenda at dolorem ducimus
+                        ea eaque fugiat illo iste laborum mollitia, nam nostrum odio pariatur
+                        perferendis ratione recusandae repellendus voluptate?<br>
+                        <p style="padding-top: 20px"><b>More <a href="#"> > </a></b></p></b>
+
+                    </div>
+
+                </div>
+                <div class="col" style="font-size: 40px;text-align: center; padding-top: 400px">   <b>Our team</b></div>
             </div>
         </div>
 
-            <div class="col" style="font-size: 40px;text-align: center;padding-top: 100px"><b>Portfolio</b></div>
-        <div class="col-6"
-             style="background-image: url('image/Ellipse 2.png');background-repeat: no-repeat; height: 370px;background-position: center;margin-top: 200px">
-            <div class="tell" style="background-image: url('image/nur qaytarish.png'); width: 551px;height: 453px;background-repeat: no-repeat"></div>
+        <div class="col-12"
+             style="background-image: url('image/Rectangle 6.1.png'); background-repeat: no-repeat; height: 800px;background-position: right">
+
         </div>
     </div>
-
-
-
-
- <div class="row">
-    </div>
-
- </div>
     <div class="row">
+        <div class="col-12" style="background-image: url('image/Group 3.png'); background-repeat: no-repeat; height: 600px">
+           <div class="row" style="display: flex">
+               <div class="col">
+                   <p style="text-align: center; padding-top: 100px;color: white;font-size: 30px"><b>Odiljonova Dilshoda</b>
+                       <br><p style="padding-top: 10px; color: white;font-size: 20px;text-align: center">lorem nn</p></p>
+                   <p> <hr width="30%;center" color="#FFF"></p>
+
+                    <p style="margin-left: 270px"><a href="#"><img src="image/004-instagram.png" height="30" width="30"/></a>
+                        <a href="#"> <img src="image/003-telegram.png" height="30" width="30" style="margin-left: 10px"/></a>
+                        <a href="#"><img src="image/002-facebook.png" height="30" width="30" style="margin-left: 10px"/></a></p>
+               </div>
+               <div class="col">
+                   <p style="text-align: center"><b></b></p>
+               </div>
 
 
-            <div class="col-12" style="background-image: url('image/Rectangle 6.1.png'); background-repeat: no-repeat; height: 800px;background-position: right"></div>
+           </div>
         </div>
 
-
-    <div class="row">
-        <div class="col-12" style="background-image: url('image/Group 3.png'); background-repeat: no-repeat; height: 600px"></div>
-
     </div>
-    <div class="rowww">
+    <div class="row" style="box-sizing: border-box; margin: 0px 80px; justify-content: space-between;">
+        <div class="col-4">
+            <p style="font-size: 20px"><b>Contact us</b></p>
+          <div class="form" action="#" method="get">
+              <div class="cad">
+              <input type="text" size="35" style="line-height: 40px; width: 275px; padding-left: 10px; font-size:15px; box-sizing: border-box" placeholder="Full name">
+          </div>
+              <div class="cad" style="margin-top: 20px">
+                  <input type="email" size="35" style="line-height: 40px; width: 275px; padding-left: 10px; font-size:15px; box-sizing: border-box" placeholder="email">
+              </div>
+              <div class="cad"  style="margin-top: 20px">
+                  <input type="text" size="35" style="line-height: 150px; width: 275px; padding-left: 10px; font-size:15px; box-sizing: border-box" placeholder="Messege">
+              </div>
+              <div class="cad" style="margin-top: 20px">
+                  <button type="reset"size="25" style="line-height: 40px; width: 120px; background-color:#007bff;color: white; border-radius: 5%">Send</button>
+              </div>
+          </div>
+        </div>
+        <div class="col-4"><p style="font-size: 20px"><b>General</b></p>
+            <div class="cad" style="font-size: 19px;color: #6c757d">Morem hgjfh</div>
+            <div class="cad" style="padding-top: 10px; font-size: 19px;color: #6c757d">Mygj kjjfh</div>
+            <div class="cad" style="padding-top: 10px; font-size: 19px;color: #6c757d">hgv m hgjfh</div>
+            <div class="cad" style="padding-top: 10px; font-size: 19px;color: #6c757d">lufkhg fh</div>
+            <p style="font-size: 18px;padding-top: 25px;"><b>Follow us</b></p>
+             <div class="cad" style="display: flex">
+                 <p ><a href="#"><img src="image/004-instagram.png" height="32" width="32"/></a></p>
+                <p style="padding-left: 12px"> <a href="#"> <img src="image/003-telegram.png" height="32" width="32"/></a></p>
+                 <p style="padding-left: 12px"><a href="#"><img src="image/001-video.png" height="32" width="32"/></a></p>
+                 <p style="padding-left: 12px"><a href="#"><img src="image/002-facebook.png" height="32" width="32"/></a></p>
+               </div>
+            <p style="padding-top: 20px">&copy; 2020.09.14 Lorem ipsum dolor sit amet.</p>
+
+
+
+        </div>
+        <div class="col-4"><p style="font-size: 20px"><b>Company</b></p>
+            <div class="cad" style="font-size: 19px;color: #6c757d">Morem hgjfh</div>
+            <div class="cad" style="padding-top: 10px; font-size: 19px;color: #6c757d">Mygj kjjfh</div>
+            <div class="cad" style="padding-top: 10px; font-size: 19px;color: #6c757d">hgv m hgjfh</div>
+
+            <p style="font-size: 18px;padding-top: 60px;"><b>Follow us</b></p>
+            <div class="cad">
+                <p style="font-size: 30px"><b><sub style="color: #6c757d">(90)</sub>200-20-20
+                    <br><sub style="color: #6c757d">(93)</sub>200-21-21</b></p>
+            </div>
+        </div>
 
     </div>
 
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
