--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="col-12"
              style="background-image: url('image/Безымянный-1.png');background-repeat: no-repeat;width: 1440px; height: 900px">
-            <div class="col text-center" style="font-size: 30px"><b>Company statistics</b></div>
+            <div class="col text-center" style="font-size: 50px"><b>Company statistics</b></div>
             <div class="row">
                 <div class="col-6 text-center">
                     <div class="row" style="display: flex">
@@ -124,7 +124,7 @@
                 </div>
             </div>
 
-            <div class="col" style="font-size: 40px;text-align: center"><b>Portfolio</b></div>
+            <div class="col" style="font-size: 60px;text-align: center"><b>Portfolio</b></div>
             <div class="row" style="display: flex;">
                 <div class="col-6"
                      style="background-image: url('image/Ellipse 2.png');background-repeat: no-repeat; height: 370px;background-position: center;margin-top: 100px">
@@ -141,10 +141,50 @@
         </div>
         <div class="col-12"
              style="background-image: url('image/Rectangle 6.png'); background-repeat: no-repeat; height: 800px;background-position: left;margin-top: 130px">
-            <div class="row">
-                <div class="col-6"></div>
-                <div class="col-6">
-                    <div class="cad"><b ><p style="padding-top: 500px;font-size: 40px;padding-left: 20px">Services</p></b></div>
+
+            <div class="row" style="display: flex;margin-top: 500px">
+                <div class="col" style="display: flex">
+                   <div class="row">
+                       <div class="cad" style="border-radius: 5px;background-color: white; width: 110px;height: 140px;margin-left: 250px;margin-top: 100px;box-shadow: 0 0 2px darkblue;">
+                           <div class="cad" style="width: 65px;height: 65px;background-color: #b3d7ff;border-radius: 50%;margin-left: 22px;margin-top: 10px">
+                               <img src="image/telefoncha.png" height="41" width="22" style="margin-top: 10px;margin-left: 20px"/>
+                           </div>
+                           <a href="#"><p style="text-align: center;color: #0b2e13">Lorem <br> ipsumkuyg.</p></a>
+                       </div>
+                       <div class="cad" style="border-radius: 5px;background-color: white; width: 110px;height: 140px;margin-left: 10px;margin-top:  150px;box-shadow: 0 0 2px darkblue;">
+                            <div class="cad" style="width: 65px;height: 65px;background-color: #b3d7ff;border-radius: 50%;margin-left: 22px;margin-top: 10px">
+                               <img src="image/telefoncha.png" height="41" width="22" style="margin-top: 10px;margin-left: 20px"/>
+                           </div>
+                           <a href="#"><p style="text-align: center;color: #0b2e13">Lorem <br> ipsumkuyg.</p></a>
+                       </div>
+                       <div class="cad" style="border-radius: 5px;background-color: white; width: 110px;height: 140px;margin-top: 50px;margin-left: 10px;box-shadow: 0 0 2px darkblue;">
+                            <div class="cad" style="width: 65px;height: 65px;background-color: #b3d7ff;border-radius: 50%;margin-left: 22px;margin-top: 10px">
+                               <img src="image/telefoncha.png" height="41" width="22" style="margin-top: 10px;margin-left: 20px"/>
+                           </div>
+                            <a href="#"><p style="text-align: center;color: #0b2e13">Lorem <br> ipsumkuyg.</p></a>
+                       </div>
+                       <div class="cad" style="border-radius: 5px;background-color: white; width: 110px;height: 140px;margin-left: 250px;margin-top: -40px;box-shadow: 0 0 2px darkblue;">
+                            <div class="cad" style="width: 65px;height: 65px;background-color: #b3d7ff;border-radius: 50%;margin-left: 22px;margin-top: 10px">
+                               <img src="image/telefoncha.png" height="41" width="22" style="margin-top: 10px;margin-left: 20px"/>
+                           </div>
+                           <a href="#"><p style="text-align: center;color: #0b2e13">Lorem <br> ipsumkuyg.</p></a>
+                       </div>
+                       <div class="cad" style="border-radius: 5px;background-color: white; width: 110px;height: 140px;margin-left: 10px;margin-top:  10px;box-shadow: 0 0 2px darkblue;">
+                            <div class="cad" style="width: 65px;height: 65px;background-color: #b3d7ff;border-radius: 50%;margin-left: 22px;margin-top: 10px">
+                               <img src="image/telefoncha.png" height="41" width="22" style="margin-top: 10px;margin-left: 20px"/>
+                           </div>
+                           <a href="#"><p style="text-align: center;color: #0b2e13">Lorem <br> ipsumkuyg.</p></a>
+                       </div>
+                       <div class="cad" style="border-radius: 5px;background-color: white; width: 110px;height: 140px;margin-top: -90px;margin-left: 10px;box-shadow: 0 0 2px darkblue;">
+                            <div class="cad" style="width: 65px;height: 65px;background-color: #b3d7ff;border-radius: 50%;margin-left: 22px;margin-top: 10px">
+                               <img src="image/telefoncha.png" height="41" width="22" style="margin-top: 10px;margin-left: 20px"/>
+                           </div>
+                           <a href="#"><p style="text-align: center;color: #0b2e13">Lorem <br> ipsumkuyg.</p></a>
+                       </div>
+                   </div>
+                </div>
+                <div class="col">
+                    <div class="cad"><b ><p style="padding-top: 100px;font-size: 40px;padding-left: 20px">Services</p></b></div>
                     <div class="cad" style="width: 70%;text-align: left;padding-left: 20px">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Ad dicta exercitationem fuga illo minima modi mollitia nisi non,
                         officiis perferendis perspiciatis quaerat ratione, soluta tempora,
@@ -156,9 +196,11 @@
                     </div>
 
                 </div>
-                <div class="col" style="font-size: 40px;text-align: center; padding-top: 400px">   <b>Our team</b></div>
             </div>
+            <div class="col" style="font-size: 60px;text-align: center; padding-top: 400px">   <b>Our team</b></div>
+
         </div>
+
 
         <div class="col-12"
              style="background-image: url('image/Rectangle 6.1.png'); background-repeat: no-repeat; height: 800px;background-position: right">
@@ -169,27 +211,48 @@
         <div class="col-12" style="background-image: url('image/Group 3.png'); background-repeat: no-repeat; height: 600px">
            <div class="row" style="display: flex">
                <div class="col">
-                   <p style="text-align: center; padding-top: 100px;color: white;font-size: 30px"><b>Odiljonova Dilshoda</b>
-                       <br><p style="padding-top: 10px; color: white;font-size: 20px;text-align: center">lorem nn</p></p>
-                   <p> <hr width="30%;center" color="#FFF"></p>
+                   <p style="padding-left: 100px; padding-top: 100px;color: white;font-size: 30px"><b>Odiljonova Dilshoda</b>
+                       <br><p style="padding-top: 10px;padding-left: 20px; color: white;font-size: 20px;text-align: center">lorem nn</p></p>
+                   <p > <hr width="30%" color="#FFF" ></p>
 
-                    <p style="margin-left: 270px"><a href="#"><img src="image/004-instagram.png" height="30" width="30"/></a>
+                    <p style="margin-left: 160px"><a href="#"><img src="image/004-instagram.png" height="30" width="30"/></a>
                         <a href="#"> <img src="image/003-telegram.png" height="30" width="30" style="margin-left: 10px"/></a>
                         <a href="#"><img src="image/002-facebook.png" height="30" width="30" style="margin-left: 10px"/></a></p>
                </div>
                <div class="col">
-                   <p style="text-align: center"><b></b></p>
+                   <div class="cad" style="background-color: white; border-radius: 50%;width: 170px;height: 170px;margin-left: 110px;margin-top: 80px">
+                       <img src="image/qiz.jpg" height="150" width="150" style="border-radius: 50%;margin: 10px"/>
+                       </div>
+               </div>
+               <div class="col">
+                   <div class="row">
+                       <div class="cad" style="background-color: white; border-radius: 50%;width: 100px;height: 100px">
+                           <img src="image/qiz2.jpg" height="80" width="80" style="border-radius: 50%;margin: 10px"/></div>
+                       <div class="cad" style="background-color: white; border-radius: 50%;width: 100px;height: 100px;margin: 50px;">
+                           <img src="image/qiz3.jpg" height="80" width="80" style="border-radius: 50%;margin: 10px"/></div>
+                       <div class="cad" style="background-color: white; border-radius: 50%;width: 100px;height: 100px;margin: 5px;">
+                           <img src="image/qiz2.jpg" height="80" width="80" style="border-radius: 50%;margin: 10px"/></div>
+                       <div class="cad" style="background-color: white; border-radius: 50%;width: 100px;height: 100px;margin: 50px">
+                           <img src="image/qiz2.jpg" height="80" width="80" style="border-radius: 50%;margin: 10px"/>
+                       </div>
+                       <div class="cad" style="background-color: white; border-radius: 50%;width: 100px;height: 100px">
+                           <img src="image/qiz3.jpg" height="80" width="80" style="border-radius: 50%;margin: 10px"/>
+                       </div>
+
+
+                   </div>
                </div>
 
 
            </div>
+
         </div>
 
     </div>
     <div class="row" style="box-sizing: border-box; margin: 0px 80px; justify-content: space-between;">
         <div class="col-4">
             <p style="font-size: 20px"><b>Contact us</b></p>
-          <div class="form" action="#" method="get">
+          <form  action="#" method="get">
               <div class="cad">
               <input type="text" size="35" style="line-height: 40px; width: 275px; padding-left: 10px; font-size:15px; box-sizing: border-box" placeholder="Full name">
           </div>
@@ -202,7 +265,7 @@
               <div class="cad" style="margin-top: 20px">
                   <button type="reset"size="25" style="line-height: 40px; width: 120px; background-color:#007bff;color: white; border-radius: 5%">Send</button>
               </div>
-          </div>
+          </form>
         </div>
         <div class="col-4"><p style="font-size: 20px"><b>General</b></p>
             <div class="cad" style="font-size: 19px;color: #6c757d">Morem hgjfh</div>
